# heph

./: .cirrus.yml  .clippy.toml  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  Linux-proc.notes  Makefile  Makefile.include  NEW.rs  README.md  TODO  TODO.io-traits  TODO.md  http_tests.patch  main.cpp  rust-toolchain  rust-toolchain.toml
.ci/: clippy.sh  fmt.sh  test.sh
.github/: install.bash
.github/workflows/: ci.yml  heph.yml  http.yml  inbox.yml  main.yml  remote.yml  rt.yml  rust.yml  test.yml
benches/timers_container/: Cargo.toml  README.md  bench.rs
doc/: Fault Isolation.md  Remote Message Passing.md  Scheduler.md  Trace Format.md
examples/: 1_hello_world.rs  1b_hello_world.rs  2_my_ip.rs  2_rpc.rs  2_tcp_server.rs  3_actor_registry.rs  3_echo_server.rs  3_rpc.rs  3_sync_actor.rs  4_restart_supervisor.rs  4_sync_actor.rs  4b_sync_actor.rs  5a_remote_actors.rs  5b_remote_actors.rs  6_process_signals.rs  7_restart_supervisor.rs  8_tracing.rs  99_stress_memory.rs  9_systemd.rs  README.md  hello_world.rs  redis.rs
heph-hyper/: Cargo.toml
heph-hyper/src/: client.rs  lib.rs
http/: Cargo.toml  LICENSE  TODO  TODO.test.rs
http/__TODO/: OLD_uri.rs
http/__TODO/src/: uri.rs
http/__TODO/tests/functional/: uri.rs
http/examples/: my_ip.rs  route.rs  router.rs
http/src/: body.rs  client.rs  from_bytes.rs  handler.rs  header.rs  lib.rs  media_type.rs  method.rs  parse_headers.bash  request.rs  response.rs  route.rs  router.rs  server.rs  status_code.rs  str.rs  transform.rs  uri.rs  version.rs
http/src/head/: header.rs  method.rs  mod.rs  status_code.rs  version.rs
http/src/server/: handler.rs  mod.rs
http/tests/: functional.rs  spec.rs
http/tests/functional/: body.rs  client.rs  from_bytes.rs  from_header_value.rs  head.rs  header.rs  message.rs  method.rs  route.rs  server.rs  status_code.rs  transform.rs  version.rs
http/tests/spec/: rfc7230.rs  rfc7230.txt
http/tests/spec/uri/: rfc3986.txt  rfc6874.txt  rfc7320.txt  rfc8820.txt
inbox/: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
inbox/src/: lib.rs  oneshot.rs  tests.rs  waker.rs
inbox/tests/: drop.rs  functional.rs  oneshot.rs  regression.rs  threaded.rs
inbox/tests/util/: mod.rs
remote/: 0001-WIP-RPC-support.patch  Cargo.toml  Makefile  TODO.remote  patch.patch  test.patch
remote/src/: lib.rs
remote/src/net_relay/: mod.rs  routers.rs  tcp.rs  udp.rs  uuid.rs
remote/tests/: functional.rs
rt/: CHANGELOG.md  Cargo.toml  Makefile  README.md
rt/examples/: 1_hello_world.rs  2_my_ip.rs  2_spawning_actors.rs  3_rpc.rs  4_my_ip.rs  4_process_signals.rs  4_sync_actor.rs  5_my_ip.rs  6_process_signals.rs  6_restart_supervisor.rs  7_restart_supervisor.rs  7_tracing.rs  8_systemd.rs  8_tracing.rs  99_stress_memory.rs  9_runtime_setup.rs  9_systemd.rs  README.md  redis.rs
rt/src/: access.rs  bitmap.rs  bytes.rs  cancel.rs  channel.rs  coordinator.rs  error.rs  extract.rs  fd.rs  fs.rs  host.rs  info.rs  io.rs  lib.rs  local.rs  log.rs  metrics.rs  pipe.rs  process.rs  quick_start.rs  rt.rs  setup.rs  shared.rs  signal.rs  supervisor.rs  sync_worker.rs  systemd.rs  test.rs  thread_waker.rs  timer.rs  timing_wheel.rs  trace.rs  util.rs  worker.rs
rt/src/actor/: context.rs  future.rs  messages.rs  mod.rs  sync.rs  tests.rs
rt/src/actor_ref/: mod.rs  rpc.rs
rt/src/coordinator/: bitmap.rs  mod.rs  waker.rs
rt/src/fs/: mod.rs  watch.rs
rt/src/io/: buf.rs  buf_pool.rs  futures.rs  mod.rs  traits.rs
rt/src/local/: mod.rs  timers.rs  timers_tests.rs  waker.rs
rt/src/local/scheduler/: inactive.rs  mod.rs  tests.rs
rt/src/net/: futures.rs  mod.rs  server.rs  tcp_server.rs  udp.rs
rt/src/net/tcp/: listener.rs  mod.rs  server.rs  stream.rs
rt/src/net/uds/: datagram.rs  listener.rs  mod.rs  stream.rs
rt/src/process/: actor.rs  future.rs  mod.rs  tests.rs
rt/src/rt/: access.rs  coordinator.rs  error.rs  mod.rs  setup.rs  signal.rs  sync_worker.rs  worker.rs
rt/src/rt/local/: mod.rs  timers.rs  timers_tests.rs  waker.rs
rt/src/rt/local/scheduler/: inactive.rs  mod.rs  tests.rs
rt/src/rt/process/: actor.rs  future.rs  mod.rs  tests.rs
rt/src/rt/shared/: mod.rs  waker.rs
rt/src/rt/shared/scheduler/: inactive.rs  mod.rs  runqueue.rs  tests.rs
rt/src/scheduler/: cfs.rs  inactive.rs  mod.rs  process.rs  system.rs  tests.rs
rt/src/scheduler/shared/: inactive.rs  mod.rs  runqueue.rs  tests.rs
rt/src/setup/: mod.rs  scheduler.rs  timers.rs
rt/src/shared/: mod.rs  timers.rs  timers_tests.rs  waker.rs
rt/src/shared/scheduler/: inactive.rs  mod.rs  runqueue.rs  tests.rs
rt/src/spawn/: mod.rs  options.rs
rt/src/timers/: mod.rs  shared.rs  tests.rs  timing_wheel.rs
rt/src/waker/: mod.rs  shared.rs  tests.rs
rt/src/wakers/: bitmap.rs  mod.rs  ring_waker.rs  shared.rs  tests.rs
rt/tests/: examples.rs  functional.rs  message_loss.rs  process_signals.rs  regression.rs
rt/tests/functional/: access.rs  actor.rs  actor_context.rs  actor_group.rs  actor_ref.rs  bytes.rs  from_message.rs  fs.rs  fs_watch.rs  future.rs  io.rs  net_server.rs  pipe.rs  restart_supervisor.rs  runtime.rs  signal.rs  spawn.rs  sync_actor.rs  tcp_server.rs  test.rs  timer.rs  udp.rs
rt/tests/functional/scheduler/: cfs.rs  local_scheduler.rs  mod.rs  process_id.rs
rt/tests/functional/tcp/: listener.rs  server.rs  stream.rs
rt/tests/functional/uds/: datagram.rs  listener.rs  mod.rs  stream.rs
rt/tests/regression/: issue_145.rs  issue_294.rs  issue_323.rs
rt/tests/util/: mod.rs
src/: actor.rs  bytes.rs  error.rs  future.rs  inbox.rs  initiator.rs  io.rs  lib.rs  listener.rs  log.rs  mailbox.rs  messages.rs  metrics.rs  net.rs  oneshot.rs  pipe.rs  quick_start.rs  retry.rs  spawn.rs  supervisor.rs  sync.rs  systemd.rs  test.rs  tests.rs  timer.rs  trace.rs  tracing.rs  util.rs  waker.rs
src/io/: bytes.rs  (+1 more)
tests/: actor_factory.rs  actor_ref.rs  actors.rs  drop.rs  examples.rs  functional.rs  initiator.rs  message_loss.rs  new_actor.rs  oneshot.rs  process_signals.rs  regression.rs  system.rs  test.rs  test_actor.rs  threaded.rs
tools/: Cargo.toml
(+182 files in other folders)
