[package]
name          = "heph-inbox"
description   = """
Bounded capacity channel designed to be used as inbox for actors. Also supports
one shot channels.
"""
version       = "0.2.3"
authors       = ["Thomas de Zeeuw <thomasdezeeuw@gmail.com>"]
license       = "MIT"
documentation = "https://docs.rs/heph-inbox"
repository    = "https://github.com/Thomasdezeeuw/heph"
readme        = "README.md"
keywords      = ["inbox", "channel", "actor", "async"]
categories    = ["asynchronous"]
include       = ["/Cargo.toml", "src/**/*.rs", "/README.md", "/LICENSE"]
edition       = "2021"
