[package]
name          = "heph-rt"
description   = "Heph-rt is a speciailised runtime for Heph's actor."
version       = "0.5.0"
publish       = false # In development.
authors       = ["Thomas de Zeeuw <thomasdezeeuw@gmail.com>"]
license       = "MIT"
documentation = "https://docs.rs/heph-rt"
repository    = "https://github.com/Thomasdezeeuw/heph"
readme        = "README.md"
keywords      = ["actor", "runtime", "async", "functions"]
categories    = ["asynchronous"]
include       = ["/Cargo.toml", "/src/**/*.rs", "/README.md", "/LICENSE"]
edition       = "2021"

[features]
default = []

# Feature that enables the `test` module.
test = ["heph/test"]

[dependencies]
a10               = { version = "0.1.6", default-features = false, features = ["nightly"] }
heph              = { version = "0.5.0", path = "../", default-features = false }
heph-inbox        = { version = "0.2.3", path = "../inbox", default-features = false }
log               = { version = "0.4.17", default-features = false, features = ["kv_unstable", "kv_unstable_std"] }
crossbeam-channel = { version = "0.5.0", default-features = false, features = ["std"] }
libc              = { version = "0.2.96", default-features = false }
socket2           = { version = "0.5.2", default-features = false, features = ["all"] }

[dev-dependencies]
getrandom         = { version = "0.2.2", default-features = false, features = ["std"] }
std-logger        = { version = "0.5.0", default-features = false, features = ["nightly"] }

[[test]]
name    = "functional"
required-features = ["test"]

[[test]]
name    = "process_signals"
# Require full control over the spawned threads.
harness = false
required-features = ["test"]

[[test]]
name    = "regression"
required-features = ["test"]
