[package]
name          = "heph-rt"
description   = "Heph-rt is a speciailised runtime for Heph's actor."
version       = "0.5.0"
publish       = false # In development.
authors       = ["Thomas de Zeeuw <thomasdezeeuw@gmail.com>"]
license       = "MIT"
documentation = "https://docs.rs/heph-rt"
repository    = "https://github.com/Thomasdezeeuw/heph"
readme        = "README.md"
keywords      = ["actor", "runtime", "async", "functions"]
categories    = ["asynchronous"]
include       = ["/Cargo.toml", "/src/**/*.rs", "/README.md", "/LICENSE"]
edition       = "2024"

[features]
default = []

# Feature that enables the `test` module.
test = ["heph/test"]

[dependencies]
a10               = { version = "0.4.1", default-features = false, features = ["nightly"], git = "https://github.com/Thomasdezeeuw/a10.git", rev = "b3b1704a0bfeeaebd9ea3968d2ed4fe82af440ee" }
heph              = { version = "0.5.0", path = "../", default-features = false }
heph-inbox        = { version = "0.2.3", path = "../inbox", default-features = false }
log               = { version = "0.4.21", default-features = false, features = ["kv_std"] }
libc              = { version = "0.2.96", default-features = false }

[dev-dependencies]
std-logger        = { version = "0.5.3", default-features = false, features = ["nightly"] }

[[test]]
name    = "functional"
required-features = ["test"]

[[test]]
name    = "process_signals"
# Require full control over the spawned threads.
harness = false
required-features = ["test"]

[[test]]
name    = "regression"
required-features = ["test"]
